@@ -1,3 +1,11 @@
+2006-09-26  Akim Demaille  <akim@lrde.epita.fr>
+
+	Update URBI_DIRS.
+	* build-aux/urbi-dirs.m4: Update from liburbi-cpp.
+	* configure.ac: Use it.
+	* Makefile.am (AM_CPPFLAGS): Remove useless ones, add missing ones.
+	Ship uext.h.
+
 2006-09-26  Type Your Name Here  <your.mail.here@fixme.com>
 
 	Include path fix
